# Car_rental

./: CMakeLists.txt  backgound.qrc  car.cpp  car.h  car.ui  create_database.sql  customer.cpp  customer.h  customer.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  rent1.csv  rentacar.cpp  rentacar.h  rentacar.ui  rental.db
